--- a/src/App.scss
+++ b/src/App.scss
@@ -8,6 +8,13 @@ $mainColor: #bada55;
 	box-sizing: border-box;
 	position: relative;
 }
+a {
+	color: black;
+	text-decoration: none;
+}
+.navbar {
+	padding: 0 1rem;
+}
 .nav-brand img {
 	width: 110px;
 	height: 50px;
@@ -16,7 +23,24 @@ $mainColor: #bada55;
 	color: blue;
 	cursor: pointer;
 }
-
+.nav-item:hover {
+	.hidden {
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		text-align: left;
+		width: 50vw;
+		line-height: 30px;
+		border-radius: 12px;
+	}
+	.hidden a {
+		color: blue;
+		font-family: 'Roboto';
+	}
+	.hidden a:hover {
+		color: #fff;
+	}
+}
 @media screen and (min-width: 600px) {
 	.nav-item {
 		text-transform: capitalize;
@@ -39,16 +63,22 @@ $mainColor: #bada55;
 
 #nav-group {
 	display: none;
+	background: rgba(167, 214, 243, 0.808);
+	padding: 1rem;
+	position: relative;
+	top: 30px;
+	z-index: 1;
+	border-radius: 12px;
 }
 
 @media screen and (min-width: 800px) {
 	.toggle {
 		display: none;
 	}
-	nav {
+	.navbar {
 		display: flex;
 		align-items: center;
-		/* height: 70px; */
+		height: 90px;
 		justify-content: space-between;
 	}
 	#nav-group {
@@ -60,10 +90,29 @@ $mainColor: #bada55;
 	}
 
 	.hidden {
-		/* position: absolute;
-		top: 60px; */
-		background: #ececec;
-		padding: 1rem;
+		position: absolute;
+		background: rgba(160, 220, 243, 0.904);
+		padding: 1rem 4rem;
+		z-index: 1;
+	}
+	.nav-item:hover {
+		.hidden {
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-start;
+			text-align: left;
+			width: 50vw;
+			left: -13vw;
+			line-height: 30px;
+			border-radius: 12px;
+		}
+		.hidden a {
+			color: blue;
+			font-family: 'Roboto';
+		}
+		.hidden a:hover {
+			color: #fff;
+		}
 	}
 }
 .animated:hover {
