--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,10 @@ a {
 }
 .navbar {
 	padding: 0 1rem;
+	display: flex;
+	align-items: center;
+	height: 90px;
+	justify-content: space-between;
 }
 .nav-brand img {
 	width: 110px;
@@ -49,7 +53,7 @@ a {
 
 .toggle {
 	position: absolute;
-	top: 1rem;
+	top: 1.5rem;
 	right: 1rem;
 	font-size: 1.5rem;
 	cursor: pointer;
@@ -75,13 +79,10 @@ a {
 	.toggle {
 		display: none;
 	}
-	.navbar {
-		display: flex;
-		align-items: center;
-		height: 90px;
-		justify-content: space-between;
-	}
+
 	#nav-group {
+		top: 0;
+		background: none;
 		display: grid !important;
 		border: none;
 		grid-template-columns: repeat(6, 120px);
